syntax = "proto3";

package zitadel.feature.v2beta;

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/zitadel/zitadel/pkg/grpc/feature/v2beta;feature";

message SystemFeatures {
    optional bool oidc_trigger_introspection_projections = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "true";
      description: "Enable projection triggers during an introspection request. This can act as workaround if there are noticable consistency issues in the introspection repsonse, but can have an impact on performance. We are planning to remove triggers for introspection requests in the future. Please raise an issue if you needed to enable this feature.";
    }
  ];
  optional bool oidc_legacy_introspection = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "true";
      description: "We have recently refactored the introspection endpoint for performance reasons. This feature can be used to rollback to the legacy implementation if unexpected bugs arrise. Please raise an issue if you needed to enable this feature.";
    }
  ];
}